jdk1.9 -> jdk1.8 downgrade