@@ -30,6 +30,8 @@ import org.sonar.api.batch.rule.internal.NewActiveRule;
 import org.sonar.api.resources.Language;
 import org.sonar.api.rule.RuleKey;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Stream;
@@ -64,7 +66,7 @@ public final class MobSFScanReportIssueSplitterTest {
                 )
                 .forEach(builder::addRule);
         activeRules = builder.build();
-        splitter = new MobSFScanReportIssueSplitter(List.of(swiftRulesDefinition, objcRulesDefinition));
+        splitter = new MobSFScanReportIssueSplitter(Arrays.asList(swiftRulesDefinition, objcRulesDefinition));
     }
 
     private static String buildRule(Language language) {
@@ -75,7 +77,7 @@ public final class MobSFScanReportIssueSplitterTest {
     public void no_issue() {
         // prepare
         // test
-        Map<MobSFScanRulesDefinition, List<ReportIssue>> issuesSplit = splitter.split(List.of(), activeRules);
+        Map<MobSFScanRulesDefinition, List<ReportIssue>> issuesSplit = splitter.split(new ArrayList<>(), activeRules);
         // assert
         assertThat(issuesSplit).hasSize(2);
         assertThat(issuesSplit.get(swiftRulesDefinition)).isEmpty();
@@ -87,7 +89,7 @@ public final class MobSFScanReportIssueSplitterTest {
         // prepare
         ReportIssue reportIssue = new ReportIssue(buildRule(swiftRulesDefinition.getLanguage()), "message", null, 15);
         // test
-        Map<MobSFScanRulesDefinition, List<ReportIssue>> issuesSplit = splitter.split(List.of(reportIssue), activeRules);
+        Map<MobSFScanRulesDefinition, List<ReportIssue>> issuesSplit = splitter.split(Arrays.asList(reportIssue), activeRules);
         // assert
         assertThat(issuesSplit).hasSize(2);
         assertThat(issuesSplit.get(swiftRulesDefinition)).hasSize(1);
@@ -99,7 +101,7 @@ public final class MobSFScanReportIssueSplitterTest {
         // prepare
         ReportIssue reportIssue = new ReportIssue(buildRule(swiftRulesDefinition.getLanguage()), "message", "path/to/file.ext", 15);
         // test
-        Map<MobSFScanRulesDefinition, List<ReportIssue>> issuesSplit = splitter.split(List.of(reportIssue), activeRules);
+        Map<MobSFScanRulesDefinition, List<ReportIssue>> issuesSplit = splitter.split(Arrays.asList(reportIssue), activeRules);
         // assert
         assertThat(issuesSplit).hasSize(2);
         assertThat(issuesSplit.get(swiftRulesDefinition)).isEmpty();
@@ -111,7 +113,7 @@ public final class MobSFScanReportIssueSplitterTest {
         // prepare
         ReportIssue reportIssue = new ReportIssue(buildRule(swiftRulesDefinition.getLanguage()), "message", "path/to/file.swift", 15);
         // test
-        Map<MobSFScanRulesDefinition, List<ReportIssue>> issuesSplit = splitter.split(List.of(reportIssue), activeRules);
+        Map<MobSFScanRulesDefinition, List<ReportIssue>> issuesSplit = splitter.split(Arrays.asList(reportIssue), activeRules);
         // assert
         assertThat(issuesSplit).hasSize(2);
         assertThat(issuesSplit.get(swiftRulesDefinition)).hasSize(1);
@@ -124,7 +126,7 @@ public final class MobSFScanReportIssueSplitterTest {
         ReportIssue reportIssue1 = new ReportIssue(buildRule(swiftRulesDefinition.getLanguage()), "message", "path/to/file.swift", 15);
         ReportIssue reportIssue2 = new ReportIssue(buildRule(objcRulesDefinition.getLanguage()), "message", "path/to/file.m", 15);
         // test
-        Map<MobSFScanRulesDefinition, List<ReportIssue>> issuesSplit = splitter.split(List.of(reportIssue1, reportIssue2), activeRules);
+        Map<MobSFScanRulesDefinition, List<ReportIssue>> issuesSplit = splitter.split(Arrays.asList(reportIssue1, reportIssue2), activeRules);
         // assert
         assertThat(issuesSplit).hasSize(2);
         assertThat(issuesSplit.get(swiftRulesDefinition)).hasSize(1);
